@@ -42,6 +42,8 @@ DECLARE_ENTITY_TYPE(TGroup, TGroupId, NObjectClient::TDirectObjectIdHash)
 
 DECLARE_REFCOUNTED_CLASS(TSerializableClusterResources)
 DECLARE_REFCOUNTED_STRUCT(ISecurityManager)
+DECLARE_REFCOUNTED_CLASS(TUserRequestLimitsOptions)
+DECLARE_REFCOUNTED_CLASS(TUserRequestLimitsConfig)
 
 class TSubject;
 
